# todo-app

./: README.md  mise.toml
backend/: .gitignore  mise.toml  pyproject.toml  ruff.toml
backend/app/: main.py
backend/app/common/: repository.py
backend/app/core/: api.py  exceptions.py  security.py
backend/app/db/: database.py  dependencies.py  models.py
backend/app/modules/users/: dependencies.py  repositories.py  routers.py  schemas.py  services.py
backend/app/users/: models.py  routers.py  schemas.py  services.py
