[project]
name = "backend"
version = "0.1.0"
description = "Python backend for the todo-app monorepo using fastapi"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "argon2-cffi>=25.1.0",
    "fastapi[standard-no-fastapi-cloud-cli]>=0.138.0",
    "passlib>=1.7.4",
    "sqlmodel>=0.0.38",
]
